--- a/packages.Api.Enums/nuget.config
+++ b/packages.Api.Enums/nuget.config
@@ -7,7 +7,7 @@
     <packageSourceCredentials>
         <github>
             <add key="Username" value="lostinmyworld" />
-            <add key="ClearTextPassword" value="a3b741e6946076a1975fa22adc9209107a1a2ed7" />
+            <add key="ClearTextPassword" value="#GITHUB_PAT#" />
         </github>
     </packageSourceCredentials>
 </configuration>
