small changed regarding the nuget packaging

--- a/apiResponses/packages.Api.Responses/packages.Api.Responses.csproj
+++ b/apiResponses/packages.Api.Responses/packages.Api.Responses.csproj
@@ -1,26 +1,31 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>disable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Title>packages.Api.Responses</Title>
-    <Authors>lostinmyworld</Authors>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
-    <PackageTags>response;</PackageTags>
-    <Description>Easy to use responses template including template for paged results</Description>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
+        <ImplicitUsings>disable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+        <Title>packages.Api.Responses</Title>
+        <Authors>lostinmyworld</Authors>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageTags>response;</PackageTags>
+        <Description>Easy to use responses template including template for paged results</Description>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <PackageOutputPath>$(MSBuildProjectDirectory)\bin\Release\</PackageOutputPath>
+        <PackageId>packages.Api.Responses</PackageId>
+        <PackageVersion>0.0.3</PackageVersion>
+        <RepositoryUrl>https://github.com/lostinmyworld/packages.Api.Responses.git</RepositoryUrl>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <None Include="..\..\README.md">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
-  </ItemGroup>
+    <ItemGroup>
+        <None Include="..\..\README.md">
+            <Pack>True</Pack>
+            <PackagePath>\</PackagePath>
+        </None>
+    </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.1.38" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.1.38" />
+    </ItemGroup>
 
 </Project>
