--- a/apiResponses/packages.Api.Responses/packages.Api.Responses.csproj
+++ b/apiResponses/packages.Api.Responses/packages.Api.Responses.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
@@ -13,7 +13,7 @@
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
         <PackageOutputPath>$(MSBuildProjectDirectory)\bin\Release\</PackageOutputPath>
         <PackageId>packages.Api.Responses</PackageId>
-        <PackageVersion>0.0.3</PackageVersion>
+        <PackageVersion>0.0.4</PackageVersion>
         <RepositoryUrl>https://github.com/lostinmyworld/packages.Api.Responses.git</RepositoryUrl>
     </PropertyGroup>
 
@@ -22,10 +22,6 @@
             <Pack>True</Pack>
             <PackagePath>\</PackagePath>
         </None>
-    </ItemGroup>
-
-    <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.1.38" />
     </ItemGroup>
 
 </Project>
