--- a/apiResponses/packages.Api.Responses.Consumer/packages.Api.Responses.Consumer.csproj
+++ b/apiResponses/packages.Api.Responses.Consumer/packages.Api.Responses.Consumer.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
